--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="js/engine.js"></script>
     <br/>
 
+    <p>HI BUNNYDRUMS 🐰 😘 </p>
+
       <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lform action="/action_page.name="fname"><br><br>
