--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     <script src="js/engine.js"></script>
     <br/>
 
-    <p>       HI BUNNYDRUMS 🐰 😘 </p>
+    <h2>       HI BUNNYDRUMS 🐰 😘 </h2>
 
-      <label for="fname">First name:</label>
+      
   <br><br>
   
 
   
   
-  
-
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+    
+  <br/><br/>
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   
