--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
       
   <br><br>
-  <a href="https://frogger33.netlify.app/">Back to Home Page<\a>
+  <a href="https://frogger33.netlify.app/">Back to Home Page</a>
   
 
   
