--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/engine.js"></script>
     <br/>
 
-    <h2>       HI BUNNYDRUMS 🐰 😘 </h2>
+    <h2>       HI GIRLFRIEND 😘 </h2>
 
       
   <br><br>
