--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
   <br><br>
   
-
+<a href="https://ozbvodhqhp7wglue.public.blob.vercel-storage.com/2025-10-28-081349476.mp4">C64 loading video</a>
   
   
   <br/>
